--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE hmtl>
 <html>
 	<head>
-		<title>Inicio</title>
+		<title>Prog. Web</title>
 	</head>
 	<body>
-		<h1>Esteban Torres' Sites</h1>
+		<h1>Portafolio</h1>
+		<ol>
+			<li><a href="Practica_1.html">Estilos de Texto</a></li>
+			<li><a href="Practica_2.html">Curriculum Vitae</a></li>
+			<li><a href="Practica_3.html">Horario</a></li>
+		</ol>
 	</body>
 </html>
