--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 	<body>
 		<h1>Portafolio</h1>
 		<ol>
-			<li><a href="Practica_1.html">Estilos de Texto</a></li>
-			<li><a href="Practica_2.html">Curriculum Vitae</a></li>
-			<li><a href="Practica_3.html">Horario</a></li>
+			<a href="Practica_1.html"><li>Estilos de Texto</li></a>
+			<a href="Practica_2.html"><li>Curriculum Vitae</li></a>
+			<a href="Practica_3.html"><li>Horario</li></a>
 		</ol>
 	</body>
 </html>
