--- a/Practica_3.html
+++ b/Practica_3.html
@@ -4,6 +4,106 @@
 		<title>Horario</title>
 	</head>
 	<body>
-		<h1 align="center">Horario</h1>
+		<h1 align="center"><i>Horario</i></h1>
+		<h2 align="center">Ingeniería en sistemas computacionales | Grupo A</h2>
+		<table border="1">
+			<tr>
+				<td><b>Hora:</b></td>
+				<td>Lunes</td>
+				<td>Martes</td>
+				<td>Mi&eacute;rcoles</td>
+				<td>Jueves</td>
+				<td>Viernes</td>
+			</tr>
+			<tr>
+				<td>07:00AM - 08:00AM</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>08:00AM - 09:00AM</td>
+				<td rowspan="2" align="center"> Desarrollo M&oacute;vil <br> LC2 </td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>09:00AM - 10:00AM</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>10:00AM - 11:00AM</td>
+				<td rowspan="2" align="center">C&oacute;mputo Forense <br> LC5</td>
+				<td rowspan="2" align="center">Programaci&oacute;n web <br> LC2</td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>11:00AM - 12:00PM</td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>12:00PM - 01:00PM</td>
+				<td></td>
+				<td rowspan="2" align="center">C&oacute;mputo Forense <br> LRED</td>
+				<td align="center">Programaci&oacute;n web <br> LC2</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>01:00PM - 02:00PM</td>
+				<td></td>
+				<td rowspan="2" align="center">Redes <br> LC2 </td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>02:00PM - 03:00PM</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>03:00PM - 04:00PM</td>
+				<td></td>
+				<td></td>
+				<td rowspan="2" align="center">Investigaci&oacute;n <br> A6</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>04:00PM - 05:00PM</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>05:00PM - 06:00PM</td>
+				<td></td>
+				<td></td>
+				<td rowspan="2" align="center">Prog. L&oacute;g. y Func. <br> LC5</td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>06:00PM - 07:00PM</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+		</table>
 	</body>
 </html>
