--- a/Practica_3.html
+++ b/Practica_3.html
@@ -5,15 +5,15 @@
 	</head>
 	<body>
 		<h1 align="center"><i>Horario</i></h1>
-		<h2 align="center">Ingeniería en sistemas computacionales | Grupo A</h2>
-		<table border="1">
+		<h2 align="center">Ingeniería en sistemas computacionales | Grupo A | Angel Esteban Torres Trejo | 15690349</h2><br clear="none">
+		<center><table border="1">
 			<tr>
-				<td><b>Hora:</b></td>
-				<td>Lunes</td>
-				<td>Martes</td>
-				<td>Mi&eacute;rcoles</td>
-				<td>Jueves</td>
-				<td>Viernes</td>
+				<td align="center"><b>Hora:</b></td>
+				<td align="center"><b>Lunes</b></td>
+				<td align="center"><b>Martes</b></td>
+				<td align="center"><b>Mi&eacute;rcoles</b></td>
+				<td align="center"><b>Jueves</b></td>
+				<td align="center"><b>Viernes</b></td>
 			</tr>
 			<tr>
 				<td>07:00AM - 08:00AM</td>
@@ -25,17 +25,17 @@
 			</tr>
 			<tr>
 				<td>08:00AM - 09:00AM</td>
-				<td rowspan="2" align="center"> Desarrollo M&oacute;vil <br> LC2 </td>
+				<td rowspan="2" align="center">Desarrollo M&oacute;vil <br> LC2 </td>
 				<td></td>
 				<td></td>
-				<td></td>
+				<td align="center">Desarrollo M&oacute;vil <br> LC2 </td>
 				<td></td>
 			</tr>
 			<tr>
 				<td>09:00AM - 10:00AM</td>
 				<td></td>
 				<td></td>
-				<td></td>
+				<td rowspan="2" align="center">Programaci&oacute;n web <br> LC2</td>
 				<td></td>
 			</tr>
 			<tr>
@@ -44,12 +44,11 @@
 				<td rowspan="2" align="center">Programaci&oacute;n web <br> LC2</td>
 				<td></td>
 				<td></td>
-				<td></td>
 			</tr>
 			<tr>
 				<td>11:00AM - 12:00PM</td>
 				<td></td>
-				<td></td>
+				<td align="center">C&oacute;mputo Forense <br> LC3</td>
 				<td></td>
 			</tr>
 			<tr>
@@ -57,19 +56,17 @@
 				<td></td>
 				<td rowspan="2" align="center">C&oacute;mputo Forense <br> LRED</td>
 				<td align="center">Programaci&oacute;n web <br> LC2</td>
-				<td></td>
+				<td rowspan="2" align="center">Redes <br> CISCO</td>
 				<td></td>
 			</tr>
 			<tr>
 				<td>01:00PM - 02:00PM</td>
 				<td></td>
-				<td rowspan="2" align="center">Redes <br> LC2 </td>
-				<td></td>
-				<td></td>
+				<td rowspan="2" align="center">Redes <br> CISCO</td>
+				<td rowspan="2" align="center">Desarrollo M&oacute;vil <br> LC2 </td>
 			</tr>
 			<tr>
 				<td>02:00PM - 03:00PM</td>
-				<td></td>
 				<td></td>
 				<td></td>
 				<td></td>
@@ -80,11 +77,10 @@
 				<td></td>
 				<td rowspan="2" align="center">Investigaci&oacute;n <br> A6</td>
 				<td></td>
-				<td></td>
+				<td rowspan="2" align="center">Investigaci&oacute;n <br> A6</td>
 			</tr>
 			<tr>
 				<td>04:00PM - 05:00PM</td>
-				<td></td>
 				<td></td>
 				<td></td>
 				<td></td>
@@ -95,15 +91,14 @@
 				<td></td>
 				<td rowspan="2" align="center">Prog. L&oacute;g. y Func. <br> LC5</td>
 				<td></td>
-				<td></td>
+				<td rowspan="2" align="center">Prog. L&oacute;g. y Func. <br> LC5</td>
 			</tr>
 			<tr>
 				<td>06:00PM - 07:00PM</td>
 				<td></td>
 				<td></td>
 				<td></td>
-				<td></td>
 			</tr>
-		</table>
+		</table></center>
 	</body>
 </html>
