--- a/Practica_3.html
+++ b/Practica_3.html
@@ -25,45 +25,45 @@
 			</tr>
 			<tr>
 				<td>08:00AM - 09:00AM</td>
-				<td rowspan="2" align="center">Desarrollo M&oacute;vil <br> LC2 </td>
+				<td rowspan="2" align="center" bgcolor="#7574DE">Desarrollo M&oacute;vil <br> LC2 </td>
 				<td></td>
 				<td></td>
-				<td align="center">Desarrollo M&oacute;vil <br> LC2 </td>
+				<td align="center" bgcolor="#7574DE">Desarrollo M&oacute;vil <br> LC2 </td>
 				<td></td>
 			</tr>
 			<tr>
 				<td>09:00AM - 10:00AM</td>
 				<td></td>
 				<td></td>
-				<td rowspan="2" align="center">Programaci&oacute;n web <br> LC2</td>
+				<td rowspan="2" align="center" bgcolor="#D2D938">Programaci&oacute;n web <br> LC2</td>
 				<td></td>
 			</tr>
 			<tr>
 				<td>10:00AM - 11:00AM</td>
-				<td rowspan="2" align="center">C&oacute;mputo Forense <br> LC5</td>
-				<td rowspan="2" align="center">Programaci&oacute;n web <br> LC2</td>
+				<td rowspan="2" align="center" bgcolor="#E66EE0">C&oacute;mputo Forense <br> LC5</td>
+				<td rowspan="2" align="center" bgcolor="#D2D938">Programaci&oacute;n web <br> LC2</td>
 				<td></td>
 				<td></td>
 			</tr>
 			<tr>
 				<td>11:00AM - 12:00PM</td>
 				<td></td>
-				<td align="center">C&oacute;mputo Forense <br> LC3</td>
+				<td align="center" bgcolor="#E66EE0">C&oacute;mputo Forense <br> LC3</td>
 				<td></td>
 			</tr>
 			<tr>
 				<td>12:00PM - 01:00PM</td>
 				<td></td>
-				<td rowspan="2" align="center">C&oacute;mputo Forense <br> LRED</td>
-				<td align="center">Programaci&oacute;n web <br> LC2</td>
-				<td rowspan="2" align="center">Redes <br> CISCO</td>
+				<td rowspan="2" align="center" bgcolor="#E66EE0">C&oacute;mputo Forense <br> LRED</td>
+				<td align="center" bgcolor="#D2D938">Programaci&oacute;n web <br> LC2</td>
+				<td rowspan="2" align="center" bgcolor="#C36EE6">Redes <br> CISCO</td>
 				<td></td>
 			</tr>
 			<tr>
 				<td>01:00PM - 02:00PM</td>
 				<td></td>
-				<td rowspan="2" align="center">Redes <br> CISCO</td>
-				<td rowspan="2" align="center">Desarrollo M&oacute;vil <br> LC2 </td>
+				<td rowspan="2" align="center" bgcolor="#C36EE6">Redes <br> CISCO</td>
+				<td rowspan="2" align="center" bgcolor="#7574DE">Desarrollo M&oacute;vil <br> LC2 </td>
 			</tr>
 			<tr>
 				<td>02:00PM - 03:00PM</td>
@@ -75,9 +75,9 @@
 				<td>03:00PM - 04:00PM</td>
 				<td></td>
 				<td></td>
-				<td rowspan="2" align="center">Investigaci&oacute;n <br> A6</td>
+				<td rowspan="2" align="center" bgcolor="#E6806E">Investigaci&oacute;n <br> A6</td>
 				<td></td>
-				<td rowspan="2" align="center">Investigaci&oacute;n <br> A6</td>
+				<td rowspan="2" align="center" bgcolor="#E6806E">Investigaci&oacute;n <br> A6</td>
 			</tr>
 			<tr>
 				<td>04:00PM - 05:00PM</td>
@@ -89,9 +89,9 @@
 				<td>05:00PM - 06:00PM</td>
 				<td></td>
 				<td></td>
-				<td rowspan="2" align="center">Prog. L&oacute;g. y Func. <br> LC5</td>
+				<td rowspan="2" align="center" bgcolor="#75E66E">Prog. L&oacute;g. y Func. <br> LC5</td>
 				<td></td>
-				<td rowspan="2" align="center">Prog. L&oacute;g. y Func. <br> LC5</td>
+				<td rowspan="2" align="center" bgcolor="#75E66E">Prog. L&oacute;g. y Func. <br> LC5</td>
 			</tr>
 			<tr>
 				<td>06:00PM - 07:00PM</td>
