--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 	<head>
 		<title>Prog. Web</title>
+		    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
 	</head>
 	<body>
 		<h1>Portafolio</h1>
@@ -10,5 +13,5 @@
 			<a href="Practica_2.html"><li>Curriculum Vitae</li></a>
 			<a href="Practica_3.html"><li>Horario</li></a>
 		</ol>
-	</body>
+		
 </html>
