--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 			<a href="Practica_1.html"><li>Estilos de Texto</li></a>
 			<a href="Practica_2.html"><li>Curriculum Vitae</li></a>
 			<a href="Practica_3.html"><li>Horario</li></a>
+			<a href="Practica_2.html"><li>Curriculum Vitae CSS</li></a>
 		</ol>
 		
 </html>
