--- a/08-FormularioJS.html
+++ b/08-FormularioJS.html
@@ -6,7 +6,7 @@
 	</head>
 	<h1>FORMULARIO</h1>
 	<body>
-		<form action="05-formulario.html" method="GET">
+		<form action="08-FormularioJS.html" method="GET">
 			<h2>Datos del usuario</h2>
 			<label for="usuario">Usuario</label>
 			<input type="text" placeholder="Ingresa tu usuario" name="usuario" id="usuario" maxlength="15">
@@ -36,39 +36,40 @@
 
 			<h3>Ingredientes</h3>
 			<label for="i_queso">
-				<input type="checkbox" name="i_queso" id="i_queso" checked> Queso
+				<input type="checkbox" name="i_queso" id="i_queso" checked class="ingrediente"> Queso
 			</label>
 			<label for="i_chile">
-				<input type="checkbox" name="i_chile" id="i_chile"> Chile
+				<input type="checkbox" name="i_chile" id="i_chile" class="ingrediente"> Chile
 			</label>
 			<label for="i_piña">
-				<input type="checkbox" name="i_piña" id="i_piña"> Pi&ntilde;a
+				<input type="checkbox" name="i_piña" id="i_piña" class="ingrediente"> Pi&ntilde;a
 			</label>
 			<label for="i_pollo">
-				<input type="checkbox" name="i_pollo" id="i_pollo"> Pollo
+				<input type="checkbox" name="i_pollo" id="i_pollo" class="ingrediente"> Pollo
 			</label>
 			<label for="i_champinon">
-				<input type="checkbox" name="i_champinon" id="i_champinon"> Champi&ntilde;&oacute;n
+				<input type="checkbox" name="i_champinon" id="i_champinon" class="ingrediente"> Champi&ntilde;&oacute;n
 			</label>
 
 			<h3>Extras</h3>
 			<label for="e_queso">
-				<input type="checkbox" name="e_queso" id="e_queso"> Queso++
+				<input type="checkbox" name="e_queso" id="e_queso" class="extra"> Queso++
 			</label>
 			<label for="e_pastel">
-				<input type="checkbox" name="e_pastel" id="e_pastel"> Pastel
+				<input type="checkbox" name="e_pastel" id="e_pastel" class="extra"> Pastel
 			</label>
 			<label for="e_refresco">
-				<input type="checkbox" name="e_refresco" id="e_refresco"> Refresco
+				<input type="checkbox" name="e_refresco" id="e_refresco" class="extra"> Refresco
 			</label>
 			<label for="e_papas">
-				<input type="checkbox" name="e_papas" id="e_papas"> Papas
+				<input type="checkbox" name="e_papas" id="e_papas" class="extra"> Papas
 			</label>
 
 			<h3>Fecha de entrega</h3>
 			<input type="date" name="fecha" id="fecha">
 			<hr>
-			<button type="submit">Enviar</button>
+			<button type="submit" id="btnEnviar">Enviar</button>
+			<input type="text" id="costo" value="0" disabled >
 		</form>
 		<script src="scripts/zepto.js"></script>
 		<script src="scripts/formulario.js"></script>
