--- a/10-FormAjax.html
+++ b/10-FormAjax.html
@@ -4,9 +4,9 @@
 		<title>Formulario</title>
 		<link rel="stylesheet" href="css/formulario.css">
 	</head>
-	<h1>FORMULARIO</h1>
+	<h1>FORMULARIO + AJAX</h1>
 	<body>
-		<form action="08-FormularioJS.html" method="GET">
+		<form action="preproceso.php" method="POST" id="formPizza">
 			<h2>Datos del usuario</h2>
 			<label for="usuario">Usuario</label>
 			<input type="text" placeholder="Ingresa tu usuario" name="usuario" id="usuario" maxlength="15">
