--- a/06-EstilosCSS.html
+++ b/06-EstilosCSS.html
@@ -15,6 +15,7 @@
 		<p>Lorem ipsum dolor sit amet, <em>consectetur</em> adipisicing elit. Amet <b>accusamus</b> assumenda, culpa eius laudantium architecto ratione tempore ducimus, eveniet adipisci commodi illum <i>aspernatur</i> doloribus ad saepe magni dolorum porro odit.</p>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias aut iste impedit id ipsam cumque error modi, ab eveniet. In <strong>perspiciatis</strong>, sequi dolores <u>officiis</u> ea nisi incidunt inventore quo natus. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum quos possimus necessitatibus perferendis ea, ab omnis libero, quibusdam odio. Molestiae laudantium, iste. Iste beatae possimus laborum numquam sequi, qui ipsa.</p>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique fuga, laboriosam laborum est? Qui minima error cumque culpa ad, aliquid commodi <i>similique</i>, harum quam hic nihil! Vitae neque, corrupti quos.</p>
+		<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor rerum quas aperiam, accusamus quidem, quam excepturi est incidunt eveniet laboriosam sint modi ullam veritatis. Tempore reiciendis culpa nisi error est.</p>
 		<hr>
 		<div id="div1">DIV 1</div>
 		<div class="rojo">ROJO</div>
