--- a/08-FormularioJS.html
+++ b/08-FormularioJS.html
@@ -71,7 +71,7 @@
 			<button type="submit" id="btnEnviar">Enviar</button>
 			<input type="text" id="costo" value="0" disabled >
 		</form>
-		<script src="scripts/zepto.js"></script>
-		<script src="scripts/formulario.js"></script>
+		<script src="js/zepto.js"></script>
+		<script src="js/formulario.js"></script>
 	</body>
 </html>
