--- a/09-Ajax.html
+++ b/09-Ajax.html
@@ -15,8 +15,8 @@
 		<p>Último pokemón consultado: <span id="ultimo">?</span></p>
 		<div id="practica"></div>
 
-		<script src="scripts/zepto.js"></script>
+		<script src="js/zepto.js"></script>
 		<!--<script scr="scripts/cookie.min.js"></script> -->
-		<script src="scripts/ajax.js"></script>
+		<script src="js/ajax.js"></script>
 	</body>
 </html>
