--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<a class="waves-effect waves-light btn" href="ejercicios/Practica_3.html">Pr&aacute;ctica 3</a>
 				<a class="waves-effect waves-light btn" href="ejercicios/Practica_4.html">Pr&aacute;ctica 4</a>
 				<a class="waves-effect waves-light btn" href="ejercicios/Practica_5.html">Pr&aacute;ctica 5</a>
-				<a class="waves-effect waves-light btn" href="ejercicios/Practica_6.html">Pr&aacute;ctica 6</a>
+				<a class="waves-effect waves-light btn" href="Loteria/index.php">Pr&aacute;ctica 6</a>
 
 			</div>
 			
